# embed_microservice

./: .dockerignore  .env.example  .flake8  Dockerfile  README.md  docker-compose.dev.yml  embed_endpoint.py  pyproject.toml  test.yml  test_embedding_service.py
.github/: test.yml
inception/: embed_endpoint.py
tests/: conftest.py  test_embedding_service.py
tests/test_data/: sample_opinion.txt
