[tool.poetry]
name = "inception"
version = "2.0.0"
description = "A high-performance FastAPI service for generating text embeddings"
authors = ["Free Law Project <info@free.law>"]
readme = "README.md"
packages = [{include = "."}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sentence-transformers = "^2.2.2"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
nltk = "^3.8.1"
torch = "^2.1.0"
numpy = "^1.26.1"
gunicorn = "^21.2.0"
prometheus-client = "^0.19.0"
sentry-sdk = {extras = ["fastapi"], version = "^1.32.0"}
black = "^23.11.0"  # For code formatting
mypy = "^1.7.0"    # For type checking

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
httpx = "^0.25.1"
flake8 = "^6.1.0"
pytest-mock = "^3.12.0"  # For monkeypatch testing
pytest-asyncio = "^0.21.1"  # For async test support

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=. --cov-report=term-missing"
testpaths = ["tests", "."]
python_files = ["test_*.py"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "asyncio: marks tests as async",
    "embedding: marks tests as embedding-related",
    "health: marks tests as health check related",
    "embedding_generation: marks tests for embedding generation",
    "validation: marks input validation tests",
    "gpu: marks tests requiring GPU",
    "text_processing: marks text processing tests"
]
